k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radar-service
spec:
  type: NodePort
  selector:
    app: radar-app
  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 30007
