k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radar-ingress
  labels:
    app: radar-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: radar.localtest.me
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: radar-service
                port:
                  number: 5000
